# SeniorShop

./: AuthSystemUser.cpp  AuthSystemUser.h  CMakeLists.txt  Captcha.h  Libraries.h  Logger.cpp  Logger.h  LoginSystem.cpp  LoginSystem.h  Personal.cpp  Personal.h  Product.cpp  Product.h  Product.hpp  Product.sln  Product.vcxproj  Product.vcxproj.filters  README.md  SellActiv.cpp  SellActiv.h  Storage.cpp  Storage.h  User.cpp  User.h
Sale/: Sale.slnx
Sale/Sale/: Cart.cpp  Cart.hpp  Sale.vcxproj  Sale.vcxproj.filters  SaleControl.cpp  SaleControl.hpp  SaleService.cpp  SaleService.hpp  SaleUI.cpp  SaleUI.hpp
Sale/Sale/x64/Debug/: SaleControl.ixx.ifc.dt.d.json  SaleControl.ixx.ifc.dt.module.json  SaleControl.ixx.ifc.dt.module.json.command  vc145.idb
Sale/Sale/x64/Debug/Sale.tlog/: CL.write.1.tlog  Sale.lastbuildstate
Sale/Sale/x64/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.d.json  std.compat.ixx.ifc.dt.module.json  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.d.json  std.ixx.ifc.dt.module.json  std.ixx.ifc.dt.module.json.command
SeniorShop/: Admin.cpp  Admin.h  AuthSystemUser.cpp  AuthSystemUser.h  AuthSystemUser.hpp  CMakeLists.txt  Captcha.cpp  Captcha.h  Cmd.hpp  Libraries.h  Logger.cpp  Logger.h  Logger.hpp  LoginSystem.h  Main.cpp  Similaruser.cpp  Similaruser.h  Supadmin.cpp  Supadmin.h  User.cpp  User.h  captcha.cpp  captcha.hpp  main.cpp
SeniorShop/Product/: Shop.slnx
SeniorShop/Product/Shop/: Product.cpp  Product.hpp  Shop.cpp  Shop.vcxproj  Shop.vcxproj.filters
for_creators/: how_to.md
Диаграммы/: полная диаграмма.txt
